--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,22 +2,11 @@ name: Package Addon
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     tags: [ '*' ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install luarocks
-        run: sudo apt-get install luarocks
-      - name: Install luacheck
-        run: luarocks install --local luacheck
-      - name: Run luacheck
-        run: ~/.luarocks/bin/luacheck . --no-color -q
   build:
-    needs: lint
     runs-on: ubuntu-latest
 
     steps:
@@ -28,8 +17,6 @@ jobs:
 
       - name: Create Retail Package
         uses: BigWigsMods/packager@master
-        with:
-          args: -S
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
